// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders (snapshot test) 1`] = `
<div
  className="ui placeholder"
>
  <div
    className="line"
  />
  <div
    className="line"
  />
  <div
    className="line"
  />
  <div
    className="line"
  />
  <div
    className="line"
  />
  <div
    className="line"
  />
  <div
    className="line"
  />
</div>
`;

exports[`renders the component correctly when empty array is passed as measurements 1`] = `
<div
  className="event"
>
  <div
    className="content"
  >
    <div
      className="summary"
    />
  </div>
</div>
`;

exports[`renders the component correctly when no value is passed for only one measure 1`] = `
<div
  className="event"
>
  <div
    className="content"
  >
    <div
      className="summary"
    >
      <div>
        <span>
          test
        </span>
        : 
        <span>
          1
           
          7
        </span>
      </div>
      <div>
        <span>
          test2
        </span>
        : 
        <span>
          -
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the component correctly when passed full data 1`] = `
<div
  className="event"
>
  <div
    className="content"
  >
    <div
      className="summary"
    >
      <div>
        <span>
          test
        </span>
        : 
        <span>
          1
           
          7
        </span>
      </div>
      <div>
        <span>
          test2
        </span>
        : 
        <span>
          2
           
          2
        </span>
      </div>
    </div>
  </div>
</div>
`;
